added link to my-website

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-Hello, World !
+  <head>
+    <meta charset="UTF-8">
+  </head> 
+  <body>
+    <div style="text-align:center;">
+      <h1>Welcome !</h1>
+      Please visit my website <a href="https://alexandre-lelain.github.io/my-website">here</a>, which was made with <strong>React</strong> with ♥ .
+    </div>
+  </body>
 </html>
