--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  </head> 
+    <meta name="author" content="Alexandre Le Lain">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="shortcut icon" href="res/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </head>
   <body>
-    <div style="text-align:center;">
-      <h1>Welcome !</h1>
-      Please visit my website <a href="https://alexandre-lelain.github.io/my-website">here</a>, which was made with <strong>React</strong> with ♥ .
-    </div>
+    <section>
+      <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button">Enter the Matrix</a>
+    </section>
   </body>
 </html>
