--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Alexandre Le Lain">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Alexandre Le Lain</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="shortcut icon" href="res/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -12,7 +13,7 @@
   </head>
   <body>
     <section>
-      <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button">Enter the Matrix</a>
+      <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button">My Website</a>
     </section>
   </body>
 </html>
