--- a/index.html
+++ b/index.html
@@ -5,34 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Alexandre Le Lain</title>
     <link rel="shortcut icon" href="res/favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav>
-      <h1>Hello, World.</h1>
-      <div class="iconsLang">
-        <img src="res/france.png" title="français" alt="français" onclick="tradFr()"/>
-        <img src="res/usa.png" title="english" alt="english" onclick="tradEn()"/>
-      </div>
-    </nav>
-    <div class="projectList">
+    <nav class="navbar navbar-inverse">
+     <div class="container-fluid">
+       <div class="navbar-header">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
+         <h1 onclick="setRandomColor(this)" class="noselect" title="Click me!">Hello, World.</h1>
+       </div>
+       <div class="collapse navbar-collapse" id="myNavbar">
+         <ul class="nav navbar-nav navbar-right">
+           <li class="nav-item active">
+             <img src="res/usa.png" title="english" alt="english" onclick="tradEn()"/>
+           </li>
+           <li class="nav-item">
+             <img src="res/france.png" title="français" alt="français" onclick="tradFr()"/>
+           </li>
+       </div>
+     </div>
+   </nav>
+    <div>
       <section class="cv project">
-        <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button">Who am I ?</a>
+        <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button"></a>
+      </section>
+      <hr/>
+      <section class="more-projects project">
+        <a class="btn btn-primary" href="#" role="button"></a>
       </section>
     </div>
   </body>
   <footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/traductions.js"></script>
+    <script src="js/functions.js"></script>
     <script>
-      function tradFr(){
-        $('.cv a').text("Qui suis-je ?");
-      }
-      function tradEn(){
-        $('.cv a').text("Who am I ?");
-      }
+      $(document).ready(() => {trad();});
     </script>
   </footer>
 </html>
