small css fix + hide collapse when item is selected

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
        </div>
        <div class="collapse navbar-collapse" id="myNavbar">
          <ul class="nav navbar-nav navbar-right">
-           <li class="nav-item active">
+           <li class="nav-item active" onclick="hideCollapse()">
              <img src="res/usa.png" title="english" alt="english" onclick="tradEn()"/>
            </li>
-           <li class="nav-item">
+           <li class="nav-item" onclick="hideCollapse()">
              <img src="res/france.png" title="français" alt="français" onclick="tradFr()"/>
            </li>
        </div>
