added top shape and web agent

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <h1 onclick="setRandomColor(this)" class="noselect" title="Click me!">Hello, World.</h1>
+         <h1 onclick="setRandomColor(this)" class="noselect" title="Click me!"></h1>
        </div>
        <div class="collapse navbar-collapse" id="myNavbar">
          <ul class="nav navbar-nav navbar-right">
@@ -36,8 +36,16 @@
         <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button"></a>
       </section>
       <hr/>
+      <section class="agent-web project">
+        <a class="btn btn-primary" href="https://alexandre-lelain.github.io/agentWeb/" role="button"></a>
+      </section>
+      <hr/>
+      <section class="top-shape project">
+        <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.all.topshape" role="button"></a>
+      </section>
+      <hr/>
       <section class="more-projects project">
-        <a class="btn btn-primary" href="#" role="button"></a>
+        <a class="btn btn-primary" click="disable" href="#" role="button"></a>
       </section>
     </div>
     <button onclick="topFunction()" id="btnTop" title="Go to top"><i class="fa fa-angle-double-up" aria-hidden="true"></i></button>
