--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="js/traductions.js"></script>
     <script src="js/functions.js"></script>
-    <script type="application/ld+json" src="js/metadata.js"></script>
+    <script type="application/ld+json" src="js/metadata.js">
+      importMetaData();
+    </script>
     <script>
       $(document).ready(() => {
         trad();
