--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
    </nav>
     <div>
       <div class="landscape">
+
+      </div>
+      <div class="intro">
           <h1 class="landscape-title noselect">Discover my projects made with passion</h1>
           <button class="landscape-button">
               <i class="glyphicon glyphicon-arrow-down" aria-hidden="true"></i>
@@ -41,20 +44,20 @@
               <i class="glyphicon glyphicon-arrow-down" aria-hidden="true"></i>
           </button>
       </div>
-      <div class="projects">
-          <section class="cv project">
-            <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button"></a>
-          </section>
-          <section class="agent-web project">
-            <a class="btn btn-primary" href="https://alexandre-lelain.github.io/agentWeb/" role="button"></a>
-          </section>
-          <section class="top-shape project">
-            <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.all.topshape" role="button"></a>
-          </section>
-          <section class="more-projects project">
-            <a class="btn btn-primary" click="disable" href="#" role="button"></a>
-          </section>
-      </div>
+          <div class="projects">
+              <section class="cv project">
+                <a class="btn btn-primary" href="https://alexandre-lelain.github.io/my-website" role="button"></a>
+              </section>
+              <section class="agent-web project">
+                <a class="btn btn-primary" href="https://alexandre-lelain.github.io/agentWeb/" role="button"></a>
+              </section>
+              <section class="top-shape project">
+                <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.all.topshape" role="button"></a>
+              </section>
+              <section class="more-projects project">
+                <a class="btn btn-primary" click="disable" href="#" role="button"></a>
+              </section>
+          </div>
     </div>
     <button onclick="topFunction()" id="btnTop" title="Go to top"><i class="fa fa-angle-double-up" aria-hidden="true"></i></button>
   </body>
