design responsive for mobile to do

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
            <span class="icon-bar"></span>
          </button>
        </div>
-       <span class="noselect navbar-brand" onclick="setRandomColor(this)" title="Click me!">
+       <div class="nav-brand">
            <img class="icon-site" src="res/laptop.png" alt=""/>
-           <span class="navbar-title"></span>
-       </span>
+           <span class="noselect navbar-title" onclick="setRandomColor(this)" title="Click me!"></span>
+       </div>
        <div class="collapse navbar-collapse" id="myNavbar">
          <ul class="nav navbar-nav navbar-right">
            <li class="nav-item active" onclick="hideCollapse()">
