responsive css fixes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       </div>
       <div class="intro">
           <h1 class="landscape-title noselect"></h1>
-          <h2 class="landscape-subtitle"></h2>
+          <div class="landscape-subtitle-background noselect">
+              <h2 class="landscape-subtitle"></h2>
+          </div>
           <button class="landscape-button btn-success" onclick="discover();">
               <i class="fa fa-arrow-down" aria-hidden="true"></i>
               <span></span>
