--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <script>
-      window.location = 'https://alexandre-lelain.netlify.com/';
+      window.location = 'https://alexandre-lelain.dev/';
     </script>
   </head>
   <body>
-    Redirecting to <a href='https://alexandre-lelain.netlify.com/'>https://alexandre-lelain.netlify.com</a>.
+    Redirecting to <a href='https://alexandre-lelain.dev/'>https://alexandre-lelain.dev</a>.
   </body>
 </html>
